# lv_port_esp32_flickering

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  esp32_pins_to_display.csv  sdkconfig  sdkconfig.old
components/lv_examples/: component.mk  lv_ex_conf.h
components/lvgl/: component.mk  lv_conf.h
components/lvgl_esp32_drivers/lvgl_tft/: Kconfig  disp_driver.c  disp_driver.h  disp_spi.c  disp_spi.h  hx8357.c  hx8357.h  ili9341.c  ili9341.h  ili9488.c  ili9488.h  st7789.c  st7789.h
components/lvgl_esp32_drivers/lvgl_touch/: Kconfig  touch_driver.c  touch_driver.h  tp_spi.c  tp_spi.h  xpt2046.c  xpt2046.h
main/: CMakeLists.txt  Kconfig.projbuild  main.c  network_test.c  network_test.h
main/server/: error.html  root.html  test.css  test.js
